fix table spacing

--- a/src/components/checkbox/style.css
+++ b/src/components/checkbox/style.css
@@ -8,7 +8,6 @@
 	align-items: baseline;
 	border: 1px solid rgb(var(--smoothly-color-contrast));
 	border-radius: 2px;
-	height: inherit;
 	width: fit-content;
 	height: max-content;
 	margin: 0.3rem 0;
